# wallet-engine

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  prometheus.yml
.sqlx/: query-2e09fb0e3e2a945a5540d5f2d51548f27ef02868ab8afb0b632b342a52bcb2ca.json  query-4d033f418b2ef6e2f1fdfc0ca8aa748bb437386fdf2790c7e68364ab8c9fa22f.json  query-b03d633f305a3a46d15a184d20275153ecd367e97d7e59cefafb8f0484fdbab9.json  query-cb09f9b43ae6eca084d51a9b3db734a219899272931e78a8fea63f5466396faa.json  query-e5649a77a6f1a4101923ff0b2f0b684d509e835d142a6b19059f2cea2f1524eb.json
application/: dto.rs  ports.rs  service.rs
domain/: errors.rs  events.rs
infrastructure/postgres/: wallet_repository.rs
infrastructure/rabbitmq/: mod.rs  publisher.rs
interfaces/: mod.rs
interfaces/grpc/: handler.rs
proto/: wallet.proto
src/: config.rs  main.rs  observability.rs
src/application/: errors.rs  mod.rs  ports.rs
src/domain/: entities.rs  events.rs  mod.rs  repositories.rs  value_objects.rs
src/infrastructure/: mod.rs
src/infrastructure/postgres/: mod.rs  transaction_repository.rs
src/infrastructure/rabbitmq/: publisher.rs
src/interfaces/grpc/: middleware.rs  mod.rs
src/migrations/: 20260423124156_init.sql
tests/: integration_test.rs
